Added stats section

--- a/index.html
+++ b/index.html
@@ -64,12 +64,36 @@
                 </div>
                 <div class="col-md-6">
                     <div class="image-container">
-                        <img src="./images/header.png" alt="" class="img-fluid">
+                        <img src="./images/header.png" alt="" class="img-fluid p-5">
                     </div>
                 </div>
             </div>
         </div>
     </header>
+
+    <main>
+        <!-- Stats -->
+        <section class="stats container" id="stats">
+            <div class="row">
+                <div class="col-md-3 col-sm-6 text-center">
+                    <h2 class="xl-text counter" data-bs-target="328"></h2>
+                    <p class="text-uppercase fs-4">Happy Customers</p>
+                </div>
+                <div class="col-md-3 col-sm-6 text-center">
+                    <h2 class="xl-text counter" data-bs-target="285"></h2>
+                    <p class="text-uppercase fs-4">Issues Solved</p>
+                </div>
+                <div class="col-md-3 col-sm-6 text-center">
+                    <h2 class="xl-text counter" data-bs-target="520"></h2>
+                    <p class="text-uppercase fs-4">Good Reviews</p>
+                </div>
+                <div class="col-md-3 col-sm-6 text-center">
+                    <h2 class="xl-text counter" data-bs-target="127"></h2>
+                    <p class="text-uppercase fs-4">Case Studies</p>
+                </div>
+            </div>
+        </section>
+    </main>
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/script.js"></script>
 </body>
