Added go to top button

--- a/index.html
+++ b/index.html
@@ -507,6 +507,10 @@
             </div>
         </footer>
 
+        <button id="to-top" class="to-top-btn">
+            <img src="./images/up-arrow.png" alt="">
+        </button>
+
 
     </main>
     <script src="./js/bootstrap.bundle.min.js"></script>
